--- a/index.css
+++ b/index.css
@@ -70,3 +70,36 @@ body {
   z-index: -1;
   transition: all 0.4s;
 }
+
+.inner__wrapper::before {
+  content: "\f00c";
+  left: 0;
+  width: 42px;
+  background: white;
+  color: rgb(225, 225, 225);
+
+  border-radius: 5px 0 0 5px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 700;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  transform-origin: left;
+}
+
+.inner__wrapper::after {
+  right: 0;
+  width: calc(100% - 42px);
+  background: white;
+  border-radius: 0 5px 5px 0;
+  z-index: -1;
+  transform-origin: right;
+}
+
+.checkbox__wrapper input[type="checkbox"]:checked ~ .inner__wrapper::before {
+  color: white;
+  width: 40px;
+  background: #576cbc;
+}
